--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 		<div id="particles-js" data-ui="particles"></div>
 		<div id="background" data-ui="background"></div>
 		<div>
-			<audio type="audio/1" data-component="music"></audio>
+			<audio type="audio/mpeg" data-component="music"></audio>
 			<audio type="audio/mpeg" data-component="voice"></audio>
 			<audio type="audio/mpeg" data-component="sound"></audio>
 			<div class="video-wrapper align-center vertical middle" data-component="video" data-ui="video-player">
